# social-app-crawl

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: brainstormer.agent.md  code-change-reviewer.agent.md  code-simplifier.agent.md  designer.agent.md  developer.agent.md  documentation-curator.agent.md  errand-boy.agent.md  gggg.agent.md  internet-researcher.agent.md  kanbander.agent.md  knowledge-keeper.agent.md  project-manager.agent.md  qc.agent.md
.github/instructions/: frontend-design.instructions.md  kanbander-delegation.instructions.md  knowledge-keeper-delegation.instructions.md  self-improvement.instructions.md  work-logging.instructions.md
.github/prompts/: commit.prompt.md  daily-standup.prompt.md  learning-guide.prompt.md
.github/skills/ba/: SKILL.md
.github/skills/consultant/: SKILL.md
.github/skills/critical-thinking/: SKILL.md
.github/skills/cybersecurity/: SKILL.md
.github/skills/debugger/: SKILL.md
.github/skills/doc-writer/: SKILL.md  generate_docs_index.py  render_chart.py  render_mermaid.py
.github/skills/frontend-design/: SKILL.md
.github/skills/git-workflow/: SKILL.md
.github/skills/hand-drawn-diagrams/: INSTALL.md  MANUAL-INSTALL.md
.github/skills/marketing/: SKILL.md
.github/skills/philosopher/: SKILL.md
crawlers/: base.py  twitter.py
docs/: _index.md  test-init-app-project-structure.md
docs/test-plans/: SAC-2-test-plan.md
helpers/: rate_limiter.py
models/: post.py  profile.py  twitter.py
storage/: base.py  json_store.py
(+20 files in other folders)
