[project]
name = "social-app-crawl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "playwright",
    "beautifulsoup4",
    "pydantic",
    "python-dotenv",
    "typer",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
line-length = 100
target-version = "py311"
